[gd_scene load_steps=10 format=2]

[ext_resource path="res://Controllers/WorldController.tscn" type="PackedScene" id=1]
[ext_resource path="res://Controllers/GameController.gd" type="Script" id=2]
[ext_resource path="res://Controllers/BattleController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/UI/border1.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/border2.png" type="Texture" id=5]
[ext_resource path="res://Controllers/UIController.gd" type="Script" id=6]
[ext_resource path="res://Controllers/DialogBox.gd" type="Script" id=7]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://Assets/ARCADECLASSIC.TTF"

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_char = 1
font_data = SubResource( 1 )

[node name="GameController" type="Node"]
script = ExtResource( 2 )

[node name="UIController" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="WorldViewport" type="ViewportContainer" parent="UIController"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="UIController/WorldViewport"]
size = Vector2( 800, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="WorldController" parent="UIController/WorldViewport/Viewport" instance=ExtResource( 1 )]

[node name="BattleViewport" type="ViewportContainer" parent="UIController"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -250.0
margin_right = 350.0
margin_bottom = 250.0

[node name="Viewport" type="Viewport" parent="UIController/BattleViewport"]
size = Vector2( 700, 500 )
handle_input_locally = false
render_target_update_mode = 0

[node name="BattleController" parent="UIController/BattleViewport/Viewport" instance=ExtResource( 3 )]

[node name="DialogBox" type="Panel" parent="UIController"]
process_priority = 1
visible = false
margin_left = 176.0
margin_top = 44.0
margin_right = 624.0
margin_bottom = 556.0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="LU" type="TextureRect" parent="UIController/DialogBox"]
margin_left = -9.0
margin_top = -9.0
margin_right = 55.0
margin_bottom = 55.0
texture = ExtResource( 4 )

[node name="LD" type="TextureRect" parent="UIController/DialogBox"]
margin_left = -9.0
margin_top = 457.0
margin_right = 55.0
margin_bottom = 521.0
texture = ExtResource( 4 )
flip_v = true

[node name="RU" type="TextureRect" parent="UIController/DialogBox"]
margin_left = 393.0
margin_top = -9.0
margin_right = 457.0
margin_bottom = 55.0
texture = ExtResource( 4 )
flip_h = true

[node name="RD" type="TextureRect" parent="UIController/DialogBox"]
margin_left = 393.0
margin_top = 457.0
margin_right = 457.0
margin_bottom = 521.0
texture = ExtResource( 4 )
flip_h = true
flip_v = true

[node name="border" type="TextureRect" parent="UIController/DialogBox"]
margin_left = 55.0
margin_top = -9.0
margin_right = 393.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="border2" type="TextureRect" parent="UIController/DialogBox"]
margin_left = 55.0
margin_top = 512.0
margin_right = 393.0
margin_bottom = 521.0
texture = ExtResource( 5 )
stretch_mode = 2
flip_h = true
flip_v = true

[node name="border3" type="TextureRect" parent="UIController/DialogBox"]
margin_top = 55.0
margin_right = 402.0
margin_bottom = 64.0
rect_rotation = 90.0
texture = ExtResource( 5 )
stretch_mode = 2
flip_v = true

[node name="border4" type="TextureRect" parent="UIController/DialogBox"]
margin_left = 457.0
margin_top = 55.0
margin_right = 859.0
margin_bottom = 64.0
rect_rotation = 90.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UIController/DialogBox"]
anchor_left = 0.143
anchor_top = 0.133
anchor_right = 0.857
anchor_bottom = 0.875
margin_left = -16.064
margin_top = -20.096
margin_right = 16.064
margin_bottom = 16.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis vestibulum nulla, vel euismod erat. Vivamus vestibulum urna vitae ultrices iaculis. Sed sed pharetra nisi. Donec semper luctus sem, in pulvinar turpis luctus non. Donec nisi magna, consectetur vitae dui eget, tincidunt dapibus nunc. Integer at velit id enim blandit ullamcorper at sed lorem. Suspendisse in nulla vitae enim bibendum finibus ac vel neque. Vivamus posuere arcu sit amet mauris fringilla, quis placerat diam lobortis. Phasellus elementum lacus vitae massa pellentesque feugiat.[/center]"
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis vestibulum nulla, vel euismod erat. Vivamus vestibulum urna vitae ultrices iaculis. Sed sed pharetra nisi. Donec semper luctus sem, in pulvinar turpis luctus non. Donec nisi magna, consectetur vitae dui eget, tincidunt dapibus nunc. Integer at velit id enim blandit ullamcorper at sed lorem. Suspendisse in nulla vitae enim bibendum finibus ac vel neque. Vivamus posuere arcu sit amet mauris fringilla, quis placerat diam lobortis. Phasellus elementum lacus vitae massa pellentesque feugiat."
scroll_active = false

[node name="BufferTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="BufferTimer" to="." method="_on_BufferTimer_timeout"]
